development - add integration tests